# dsps

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGES.rst  LICENSE  LICENSE.rst  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: linting.yaml  linting.yml  monthly-warning-test.yaml  monthly-warning-test.yml  publish-to-pypi.yaml  tests.yaml  tests.yml
docs/source/: citation.rst  conf.py  custom_ssps.rst  dsps_data_config.rst  dsps_quickstart.ipynb  index.rst  installation.rst  quickstart.rst  reference.rst  requirements.txt  rtd_environment.yaml  tutorials.rst
dsps/: __init__.py  _version.py  attenuation_kernels.py  constants.py  diffstar_ew_kernels.py  diffstar_photometry.py  diffstar_photometry_kernels.py  equivalent_width.py  ew_kernels.py  flat_wcdm.py  load_diffstar_data.py  load_fsps_data.py  mzr.py  obsmag_from_diffstar.py  photometry.py  photometry_kernels.py  remnant_mass.py  restmag_from_diffstar.py  seds_from_diffstar.py  seds_from_tables.py  sfh_model.py  stellar_ages.py  surviving_mstar.py  utils.py  weighted_ssps.py  zh_model.py
dsps/cosmology/: __init__.py  defaults.py  flat_wcdm.py
dsps/csp_seds/: composite_sed.py  metallicity_weights.py  ssp_weights.py  stellar_age_weights.py
dsps/data/: README.txt  fsps_lsst_mags_zobs.npy  fsps_lsst_mags_zobs_imet_20_iage_5.npy  fsps_lsst_mags_zobs_imet_2_iage_90.npy  fsps_ssp_imet_20_iage_5.npy  fsps_ssp_imet_2_iage_90.npy  log_age.npy  lsst_g_transmission.npy  lsst_i_transmission.npy  lsst_r_transmission.npy  lsst_u_transmission.npy  lsst_y_transmission.npy  lsst_z_transmission.npy  zlegend.npy
dsps/data_loaders/: __init__.py  defaults.py  fake_ssp.py  load_emline_info.py  load_filter_data.py  load_ssp_data.py  retrieve_fake_fsps_data.py  retrieve_fsps_data.py
dsps/dust/: __init__.py  att_curves.py  attenuation_kernels.py  blackbody.py  graybody_emission.py  opacity_functions.py  utils.py
dsps/em_lines/: equivalent_width.py  ew_kernels.py
dsps/experimental/: diffburst.py
dsps/imf/: remnant_mass.py  surviving_mstar.py
dsps/metallicity/: defaults.py  mzr.py  umzr.py
dsps/photometry/: __init__.py  photometry.py  photometry_interpolation.py  photometry_kernels.py  photpop.py  utils.py
dsps/sed/: __init__.py  csp_sed.py  metallicity_weights.py  ssp_weights.py  stellar_age_weights.py  stellar_sed.py
dsps/sfh/: diffburst.py
dsps/ssp/: seds_from_tables.py  stellar_ages.py  weighted_ssps.py  weighted_table_interpolation.py
dsps/tests/: retrieve_fake_fsps_data.py  test_attenuation.py  test_constants.py  test_diffstar_ew_kernels.py  test_diffstar_photometry.py  test_diffstar_photometry_kernels.py  test_dsps_obsframe_photometry.py  test_dsps_seds.py  test_equivalent_width.py  test_ew_kernels.py  test_flat_wcdm.py  test_metallicity.py  test_mzr.py  test_photometry.py  test_photometry_kernels.py  test_readme.py  test_remnant_mass.py  test_retrieve_fake_fsps_data.py  test_sfh_model.py  test_stellar_ages.py  (+4 more)
notebooks/: tabulate_mstar_surviving_different_imfs.ipynb  validate_dsps_attenuation.ipynb
scripts/: generate_fsps_photometry_validation_data.ipynb  write_fsps_data_to_disk.py
(+69 files in other folders)
