[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dsps/_version.py"

[tool.setuptools.package-data]
dsps = [
    "data/*.npy",
    "tests/testing_data/*.txt",
    "tests/testing_data/*.dat",
    "*/tests/testing_data/*.txt",
    "*/tests/testing_data/*.dat",
]

[project]
name = "dsps"
authors = [
    {name = "Andrew Hearin", email = "ahearin@anl.gov"},
]
description = "Differentiable Stellar Population Synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.rst"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "jax", "h5py"]
dynamic = ["version"]

[tool.black]
line-length = 88
