[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7", 
    "tomli>=1.0.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dsps/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-data = {dsps = ["data/*.npy", "tests/testing_data/*.npy", "tests/testing_data/*.txt", "tests/testing_data/*.dat", "*/tests/testing_data/*.txt", "*/tests/testing_data/*.dat"]}
package-dir = {dsps = "dsps"}

[project.urls]
home = "https://github.com/ArgonneCPAC/dsps"

[project]
name = "dsps"
authors = [
    {name = "Andrew Hearin", email = "ahearin@anl.gov"},
]
description = "Differentiable Stellar Population Synthesis"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.rst"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "jax", "h5py"]
dynamic = ["version"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E231", "E241", "E501", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]
max-line-length = 88
count = true